fix content goes outside the block on mobile

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1385,6 +1385,10 @@ body {
         text-decoration: none;
         color: #184a90;
     }
+
+    code {
+        word-break: break-word;
+    }
 }
 
 @media print {
